# SlicerLungCTAnalyzer

./: CMakeLists.txt  CTLungAnalyzer.s4ext  README.md  version.json  versionhistory.txt
CTLungAnalyzer/: CMakeLists.txt  CTLungAnalyzer.py
CTLungAnalyzer/Resources/UI/: CTLungAnalyzer.ui
CTLungMaskGenerator/: CMakeLists.txt  CTLungMaskGenerator.py
CTLungMaskGenerator/Resources/UI/: CTLungMaskGenerator.ui
LungCTAnalyzer/: CMakeLists.txt  LungCTAnalyzer.py
LungCTAnalyzer/Resources/UI/: LungCTAnalyzer.ui
LungCTSegmenter/: CMakeLists.txt  LungCTSegmenter.py
LungCTSegmenter/Resources/UI/: LungCTSegmenter.ui
PythonScripts/: processAllCTInDir.py
